Fix close icon alignment in panels, account names misalignment, tooltip in new project btn

--- a/src/components/common/topbar/newProject/style.less
+++ b/src/components/common/topbar/newProject/style.less
@@ -58,3 +58,8 @@
         width: 8px;
     }
 }
+
+.alignCenter {
+    display: flex;
+    align-items: center;
+}
