--- a/src/components/networkAccountSelector/style.less
+++ b/src/components/networkAccountSelector/style.less
@@ -125,6 +125,7 @@
             .accountName {
                 overflow: hidden;
                 text-overflow: ellipsis;
+                max-width: 99%;
             }
             &:hover {
                 background-color: rgba(128, 46, 255, 0.10);
