--- a/src/components/projecteditor/sidePanels/style.less
+++ b/src/components/projecteditor/sidePanels/style.less
@@ -120,6 +120,9 @@
         .icon {
             margin-left: auto;
             color: #c7c7c7;
+            padding-left: 0px;
+            padding-right: 0px;
+            display: flex;
             &:hover {
                 color: white;
             }
